force-app/main/default/objects/AC_Scope_Controller__mdt/AC_Scope_Controller__mdt.object-meta.xml
<CustomObject>
    <description>The configurable elements of the Add/Change Add Quote functionality.  Will be used to determine whether or not the Add Quote button should be displayed.  Will remove the add quote button from scope for non-New Service requests and will instead layer the functionality onto the Master Intake Flow</description>
    <label>Add-Change Scope Controller</label>
    <pluralLabel>Add-Change Scope Controllers</pluralLabel>
</CustomObject>