force-app/main/default/objects/AC_Scope_Controller__mdt/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>