force-app/main/default/objects/AC_Scope_Controller__mdt/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>