force-app/main/default/objects/AC_Scope_Controller__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Provides Case Type as a text box that allows us to track which case types are allowed through the Add/Change quote process</description>
    <label>Case Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>