force-app/main/default/objects/AC_Scope_Controller__mdt/fields/Restriction_Type__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Type__c</fullName>
    <label>Restriction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Classification (Type, Sub-Type, Reason)</fullName>
                <default>true</default>
                <label>Case Classification (Type, Sub-Type, Reason)</label>
            </value>
            <value>
                <fullName>User Categorization Code</fullName>
            </value>
            <value>
                <fullName>Price Model Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>