force-app/main/default/objects/AC_Scope_Controller__mdt/listViews/Restrictions_View.listView-meta.xml
<ListView>
    <fullName>Restrictions_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Restriction_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Case_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>Restrictions View</label>
</ListView>